Code reiview + end of script

--- a/centreon/centreon.cfg
+++ b/centreon/centreon.cfg
@@ -17,4 +17,11 @@ CENTREON_PERL_CONNECTOR_DIR="centreon-connectors-19.10.0/perl/build"
 
 CENTREON_SSH_CONNECTOR_DIR="/home/vmubuntu/centreon-connectors-19.10.0/ssh/build"
 
+CENTREON_ENGINE="http://files.download.centreon.com/public/centreon-engine/centreon-engine-19.10.5.tar.gz"
+CENTREON_ENGINE_TGZ="centreon-engine-19.10.5.tar.gz"
+CENTREON_ENGINE_DIR="centreon-engine-19.10.5"
+
+CENTREON_ENGINE_PLUGIN="http://nagios-plugins.org/download/nagios-plugins-2.2.1.tar.gz"
+CENTREON_ENGINE_PLUGIN_TGZ="nagios-plugins-2.2.1.tar.gz"
+
 cd /tmp
