--- a/centreon/centreon.cfg
+++ b/centreon/centreon.cfg
@@ -7,15 +7,38 @@ check() {
 	fi
 }
 
-CENTREON_CLIB="http://files.download.centreon.com/public/centreon-clib/centreon-clib-19.10.0.tar.gz"
-CENTREON_CLIB_TGZ="centreon-clib-19.10.0.tar.gz"
-CENTREON_CLIB_DIR="centreon-clib-19.10.0"
+CENTREON_CLIB="http://files.download.centreon.com/public/centreon-clib/centreon-clib-18.10.0.tar.gz"
+CENTREON_CLIB_TGZ="centreon-clib-18.10.0.tar.gz"
+CENTREON_CLIB_DIR="centreon-clib-18.10.0"
 
-CENTREON_PERL_CONNECTOR="http://files.download.centreon.com/public/centreon-connectors/centreon-connectors-19.10.0.tar.gz"
-CENTREON_PERL_CONNECTOR_TGZ="centreon-connectors-19.10.0.tar.gz"
-CENTREON_PERL_CONNECTOR_DIR="centreon-connectors-19.10.0/perl/build"
+CENTREON_PERL_CONNECTOR="http://files.download.centreon.com/public/centreon-connectors/centreon-connectors-18.10.0.tar.gz"
+CENTREON_PERL_CONNECTOR_TGZ="centreon-connectors-18.10.0.tar.gz"
+CENTREON_PERL_CONNECTOR_DIR="centreon-connectors-18.10.0/perl/build"
 
-CENTREON_SSH_CONNECTOR_DIR="/home/vmubuntu/centreon-connectors-19.10.0/ssh/build"
+CENTREON_SSH_CONNECTOR_DIR="/home/vmubuntu/centreon-connectors-18.10.0/ssh/build"
+
+CENTREON_ENGINE="http://files.download.centreon.com/public/centreon-engine/centreon-engine-18.10.0.tar.gz"
+CENTREON_ENGINE_TGZ="centreon-engine-18.10.0.tar.gz"
+CENTREON_ENGINE_DIR="centreon-engine-18.10.0"
+
+NAGIOS_PLUGIN="http://nagios-plugins.org/download/nagios-plugins-2.2.1.tar.gz"
+NAGIOS_PLUGIN_TGZ="nagios-plugins-2.2.1.tar.gz"
+
+MONITORING_PLUGINS="https://www.monitoring-plugins.org/download/monitoring-plugins-2.2.tar.gz"
+MONITORING_PLUGINS_TGZ="monitoring-plugins-2.2.tar.gz"
+MONITORING_PLUGINS_DIR="monitoring-plugins-2.2"
+
+CENTREON_PLUGINS="http://files.download.centreon.com/public/centreon-plugins/centreon-plugins-20191016.tar.gz"
+CENTREON_PLUGINS_TGZ="centreon-plugins-20191016.tar.gz"
+CENTREON_PLUGINS_DIR="centreon-plugins-20191016"
+
+CENTREON_BROKER="http://files.download.centreon.com/public/centreon-broker/centreon-broker-18.10.1.tar.gz"
+CENTREON_BROKER_TGZ="centreon-broker-18.10.1.tar.gz"
+CENTREON_BROKER_DIR="centreon-broker-18.10.1"
+
+CENTREON_UI="http://files.download.centreon.com/public/centreon/centreon-web-18.10.7.tar.gz"
+CENTREON_UI_TGZ="centreon-web-18.19.7.tar.gz"
+CENTREON_UI_DIR="centreon-web-18.19.7"
 
 CENTREON_ENGINE="http://files.download.centreon.com/public/centreon-engine/centreon-engine-19.10.5.tar.gz"
 CENTREON_ENGINE_TGZ="centreon-engine-19.10.5.tar.gz"
