--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+ESXI_USER_PASSWORD="ESXI root password"
 HAPROXY_STATS_PASSWORD="Password for HAProxy stats"
 DB_ROOT_PASSWORD="Root password for the database"
 DB_USER_PASSWORD="Wordpress user password for the database"
